--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - 'WORDPRESS_DB_NAME=wordpress'
       - 'WORDPRESS_DB_PASSWORD=wordpress'
       - 'WORDPRESS_DB_USER=wordpress'
+    image: docker.io/tjend/alpine-nginx-phpfpm-wordpress
     ports:
       - 8080:80
   wordpress-db:
